--- a/src/App.css
+++ b/src/App.css
@@ -230,3 +230,48 @@ a {
     border-bottom: none;
   }
 }
+.withdraw-content {
+    flex: 1;
+    padding: 30px;
+    background: #181818;
+    min-height: 100vh;
+    overflow: scroll;
+    height: 100vh;
+     scrollbar-width: thin;            /* Firefox */
+    scrollbar-color: #555 #181818; 
+    
+}
+.withdraw-content::-webkit-scrollbar {
+    width: 8px;
+}
+.withdraw-content::-webkit-scrollbar-track {
+    background: #181818;
+}
+.withdraw-content::-webkit-scrollbar-thumb {
+    background-color: #555;
+    border-radius: 4px;
+}
+.withdraw-content::-webkit-scrollbar-thumb:hover {
+    background-color: #777;
+}
+
+.withdraw-sidebar{
+   overflow: scroll;
+    height: 100vh;
+     scrollbar-width: thin;            /* Firefox */
+    scrollbar-color: #555 #181818; 
+}
+
+.withdraw-sidebar::-webkit-scrollbar {
+    width: 8px;
+}
+.withdraw-sidebar::-webkit-scrollbar-track {
+    background: #181818;
+}
+.withdraw-sidebar::-webkit-scrollbar-thumb {
+    background-color: #555;
+    border-radius: 4px;
+}
+.withdraw-sidebar::-webkit-scrollbar-thumb:hover {
+    background-color: #777;
+}
