--- a/src/Css/UsersData.css
+++ b/src/Css/UsersData.css
@@ -103,3 +103,36 @@
   cursor: default;
   font-weight: bold;
 }
+.btn-now:nth-child(1){
+  background-color: #141414;
+  color: white;
+  padding: 10px;
+  border: none;
+  border: 1px solid white;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 5px;
+}
+.btn-now:nth-child(2){
+   background-color: red;
+  color: white;
+  padding: 10px;
+  border: none;
+  border: 1px solid white;
+  border-radius: 10px;
+  margin: 5px;
+  cursor: pointer;
+}
+.block-btn{
+    background-color: red;
+    color: white;
+    border-radius: 10px;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.users-table tbody{
+  background-color: white;
+  color: black;
+}
